# Rust7

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: protocol-validator.md
.zed/: debug.json.sample
doc/: Documentation.md
examples/: README.md
examples/diagnostics/: Cargo.toml  README.md  main.rs
src/: client.rs  diag_events.rs  lib.rs
src/tests/: area_validation.rs  bit_ops.rs  client_config.rs  client_new.rs  error_display.rs  iso_validation.rs  macros.rs  mod.rs  not_connected.rs  szl.rs
tests/integration/: common.rs  connection.rs  main.rs  read_write.rs  szl.rs
