[package]
name = "rust7"
version = "0.1.2"
authors = ["Davide Nardella <davenardella@live.it>"]
edition = "2021"
description = "Native Rust S7 client (Snap7-style) for Siemens PLCs."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/rust7"
repository = "https://github.com/davenardella/rust7"
homepage = "https://github.com/davenardella/rust7"
keywords = ["s7", "siemens", "plc", "industrial", "snap7"]
categories = ["network-programming","api-bindings"]

[lib]
name = "rust7"
path = "src/lib.rs"

[dev-dependencies]
testcontainers = { version = "0.27", features = ["blocking"] }

[[test]]
name = "integration"
path = "tests/integration/main.rs"
